--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@
 }
 .product {
   width: 100%;
-  height: 100%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
 .pro {
-  margin-left: 200px;
+  margin-left: 270px;
   width: 40%;
 }
 .grchg {
@@ -156,7 +156,7 @@
   width: 100%;
   height: 100vh;
   transform-origin: bottom right;
-  background: linear-gradient(0deg, transparent, purple , purple);
+  background: linear-gradient(0deg, transparent, #ff0000, #ff0000);
   animation: animate 6s linear infinite;
 }
 .animation::after {
@@ -167,7 +167,7 @@
   width: 100%;
   height: 150vh;
   transform-origin:bottom left;
-  background: linear-gradient(0deg, transparent, lightblue, lightblue);
+  background: linear-gradient(0deg, transparent,#ff0000, #ff0000);
   animation: animate 6s linear infinite;
   animation-delay: -3s;
 }
@@ -182,7 +182,6 @@
 .bck-img {
   width: 40%;
   height: 70%;
-  border-radius:50px ;
   background-image: url(./meeting-back.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -214,7 +213,6 @@
   align-items: center;
 }
 .pro2 img {
-  border-radius: 50px;
   margin-left: 70px;
 }
 .about-us {
@@ -232,12 +230,13 @@
 }
 .says {
   width: 100%;
-  height: 60%;
+  height: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 3%;
-} 
+  margin-top: 150px;
+  gap: 6%;
+}
+.says 
 .footer {
   width: 100%;
   height: 40vh;
