--- a/src/Blog/blog.css
+++ b/src/Blog/blog.css
@@ -4,7 +4,7 @@
 }
 .App {
   width: 100%;
-  height: fit-content;
+  height: 150vh;
 }
 .Head {
   width: 100%;
@@ -34,9 +34,28 @@
 }
 .posts {
   width: 100%;
-  height: fit-content;
+  height: 1000px;
   display: flex;
   flex-wrap: wrap ;
   gap:30px;
   justify-content: center;
+  margin-top: 20px;
+}
+.nxt-page {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+}
+.cntr button {
+  padding: 10px 60px;
+  border: none;
+  border-radius: 30px;
+}
+.cntr svg {
+  width: 17px;
+  height: 17px;
+  margin-left: 5px;
 }
