--- a/src/First/First.css
+++ b/src/First/First.css
@@ -14,12 +14,11 @@
     justify-content: space-evenly;
   }
   .first {
-    width: 18%;
-    height: 65%;
+    width: 370px;
+    height: 375px;
     box-shadow: 1px 1px 5px grey;
     display: flex;
     flex-direction: column;
-    gap: 15px;
     border-radius: 50px;
   }
   .star {
@@ -32,32 +31,28 @@
     align-items: center;
   }
   .text {
-    width: 100%;
-    height: 50%;
-    /* margin-left: 30px; */
-    /* margin-top: 19px; */
+    width: 290px;
+    height: 154px;
+    margin-left: 30px;
+    margin-top: 19px;
   }
   .text p {
     text-align: start;
-    font-size: 90%;
+    font-size: 18px;
     font-weight: 600;
-    line-height: 35px;
+    line-height: 29px;
     vertical-align: center;
     color: black;
   }
   .profile {
-    width: 50%;
-    height: 20%;
+    width: 200px;
+    height: 56px;
     margin-left: 40px;
-    /* margin-top: 50px; */
+    margin-top: 50px;
     display: flex;
     align-items: center;
   }
-  .profile img {
-    width: 40%;
-    height: 90%;
-  }
-  .profile marquee {
+  .profile p {
     font-size: 18px;
     line-height: 29px;
     font-weight: 600;
