--- a/src/Post/post.css
+++ b/src/Post/post.css
@@ -15,7 +15,7 @@
 }
 .second {
   width: 100%;
-  height: fit-content;
+  height: 90vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -44,11 +44,9 @@
 .creater img {
   width: 55px;
   height: 100%;
-  border-radius: 50px;
 }
 .p {
   height: 100%;
-  margin-left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +60,7 @@
 }
 .mirage {
   width: 100%;
-  height: fit-content;
+  height: 80vh;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -78,13 +76,14 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 30px;
+  margin-top: 45px;
 }
 .end {
   width: 100%;
   height: 7vh;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 300px;
 }
 .end2 {
   width: 40%;
