--- a/src/router/id.css
+++ b/src/router/id.css
@@ -20,8 +20,8 @@
   display: flex;
   flex-direction: column;
   margin-top: 5vh;
-  border-radius: 50px;
-  box-shadow: 0 0 10px white;
+  border-radius: 100px;
+  box-shadow: 0 0 40px white;
   background-color: white;
 }
 .major {
@@ -37,7 +37,7 @@
   display: flex;
   width: 600px;
   height: 300px;
-  border-radius: 50px;
+  border-radius: 100px;
   object-fit: cover;
   justify-content: flex-start;
 }
@@ -76,12 +76,14 @@
 }
 .additional {
   width: 100%;
-  height: 2.5vh;
+  /* height: 2.5vh; */
 }
 .comment1 input {
-  width:max-content;
+  width: fit-content;
 }
 .comment {
+  border: 1px solid #646464;
+  border-radius: 100px;
   display: flex;
   align-items: center;
   flex-direction: column;
